2010-10-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamerend.cc: fix regression from r6352 that ignored light sources

2010-10-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ibuf8.cc, ibuf16.cc: take pitch into account in fill_static
	* bggame.cc, sigame.cc: remove mentions of Exult from intro
	* palette.cc: fix uninitialized variable

2010-10-05 Dominik Reichardt <dominus@users.sourceforge.net>
	* data/bg/ and data/si: disabled Alt+KP+ and Alt+KP- key combination to switch 
	 resolution, it doesn't play nice with the new render code.

2010-10-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* keyactions.cc: Show message when mapedit keys are used and Exult is built
	  without ES support.

2010-10-01  Ryan Nunn <colourles@users.sourceforge.net>
	* Changed things so it is possible to open some of the options gumps from the
	  Exult menu (requires data from the games to work, but thats ok). Removed 
	  the old setup main menu screen and replaced it with the in game gumps.

2010-09-04  Ryan Nunn <colourles@users.sourceforge.net>
	* menulist.cc : Trying to stop mouse lag
	* mouse.cc : Stopping warping from occuring unless fastmouse is enable 
	  (otherwise mouse can get trapped when windowed)
	* shapes/fontgen.cc : Added a Win32 GDI font renderer. My experience is its
	  better at producing small pixel fonts compared to FreeType (because it 
	  can legally use Font hinting all the time)
	* gamemgr/bggame.cc : Added missing zooms into BG Intro
	* imagewin/imagewin.h : Added a method to get access to draw_surface

2010-08-30  Ryan Nunn <colourles@users.sourceforge.net>
	* imagewin/imagewin.cc : Explicitly set pixel format of the 'inter_surface'.
	  Might fix Dominik's colour issues if the SDL default does not match the 
	  display surfaces

2010-08-15 Dominik Reichardt <dominus@users.sourceforge.net>
	* data/bg/ and data/si: added autonotes.txt for each game. For now these mostly